--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -16,6 +16,9 @@ weaviate-client = "^4.10.2"
 pydantic = "^2.10.4"
 requests = "^2.32.3"
 
+[tool.poetry.group.dev.dependencies]
+ruff = "^0.8.6"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
