--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -18,6 +18,9 @@ requests = "^2.32.3"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.8.6"
+mypy = "^1.14.1"
+types-beautifulsoup4 = "^4.12.0.20241020"
+types-requests = "^2.32.0.20241016"
 
 [build-system]
 requires = ["poetry-core"]
