--- a/backend/manifesto_archive.json
+++ b/backend/manifesto_archive.json
@@ -1,1 +1,8 @@
-{}
+{
+  "31-12-2024": {
+    "image_url": "/cdn-cgi/image/format=auto,width=1400/https://static.ilmanifesto.it/2024/12/31prima-milani-capodanno-getty.jpg",
+    "title": "I soliti sospetti",
+    "body": "I soliti sospetti Istituire «zone rosse» nelle città e vietarle ai «soggetti pericolosi». Con una lettera ai prefetti, il ministro Piantedosi anticipa il disegno di legge «sicurezza». Dalle feste in piazza di questa sera e per i prossimi mesi, decide la polizia chi entra nei centri storici e chi deve stare lontano",
+    "saved_image": "images/il-manifesto_2024-12-31_prima-milani-capodanno-getty.jpg"
+  }
+}
