fixing semantics of oldest and newest dates

--- a/backend/.env
+++ b/backend/.env
@@ -3,3 +3,4 @@ COP_WEAVIATE_URL=localhost
 COP_WEAVIATE_API_KEY=your_weaviate_api_key
 COP_COPERTINE_COLLNAME=Copertine
 COP_VISION_MODELNAME=gpt-4o-mini
+COPERTINE_OLDEST_DATE=2013-03-27
