--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -14,6 +14,8 @@ beautifulsoup4 = "^4.12.3"
 weaviate-client = "^4.10.2"
 pydantic = "^2.10.4"
 requests = "^2.32.3"
+fastapi = "^0.115.6"
+uvicorn = "^0.34.0"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.8.6"
