new gitignore and docker files

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,4 @@
-images/
-.DS_Store
 # General Python Ignore Patterns
-# Ignore the Python virtual environment (venv, .env, .venv, etc.)
-venv/
-.venv/
-env/
-.env/
 *.pyc
 *.pyo
 *.pyd
@@ -15,9 +8,16 @@ __pycache__/
 *.db
 *.sqlite3
 *.sqlite
-# .tox, .nox, .coverage, dist, build, and *.egg-info
-tox/
-nox/
+
+# Virtual Environments
+venv/
+.venv/
+env/
+.env/
+
+# Python Project Metadata
+.tox/
+.nox/
 .coverage
 *.coverage
 *.egg-info/
@@ -27,78 +27,47 @@ build/
 # Jupyter Notebooks
 .ipynb_checkpoints/
 
-# VSCode settings folder
-.vscode/
-
 # Node.js/Next.js Ignore Patterns
-# Ignore node_modules, Next.js build artifacts, etc.
 node_modules/
 .next/
+.next/cache/
+.next/static/
+.next/server/
 out/
-*.log
 
-# .env files for environment variables (Not committing sensitive data)
+# Lock Files
+package-lock.json
+yarn.lock
+.pnpm/
+.yarn/
+.pnp.*
+
+# Environment Files
+.env
 .env.local
 .env.development.local
 .env.production.local
 .env.test.local
 .env.*
 
-# Build output and cache files
-.next/cache/
-.next/static/
-.next/server/
+# Editor and IDE Files
+.vscode/
+.idea/
+*.iml
 
-# Next.js and npm/yarn lock files (if you want to ignore lock files too)
-package-lock.json
-yarn.lock
-
-# Dependency directories (if using package managers like pnpm or yarn)
-.pnpm/
-.yarn/
-
-# MacOS system files
+# OS-Specific Files
 .DS_Store
-
-# Windows system files
 Thumbs.db
 
-# IDEs and Editors
-# Ignore all possible editor related files for VSCode, PyCharm, etc.
-
-# VS Code
-.vscode/
-
-# JetBrains/PyCharm (if used)
-.idea/
-
-# Python bytecode and cache
-__pycache__/
-
-# PyCharm specific settings
-*.iml
-.idea/
-
-# Python Wheel Files
-*.whl
-
-# Docker related files (if relevant, like a Docker build context)
-Dockerfile
-docker-compose.yml
-
-# Temporary files created by OS or text editors
+# Temporary or Backup Files
 *.swp
 *.swo
 *.bak
 *.tmp
-
-# Yarn PnP (if you're using Yarn Plug'n'Play)
-.pnp.*
-
-# Additional Files
-# These are temporary or unnecessary files that can be safely ignored
 *.pid
 *.seed
-*.bak
+
+# Additional
 backend/.DS_Store
 .aider*
+images/
