--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 # .env
-COP_WEAVIATE_URL=localhost
+COP_WEAVIATE_URL=127.0.0.1
 COP_WEAVIATE_API_KEY=your_weaviate_api_key
 COP_COPERTINE_COLLNAME=Copertine
 COP_VISION_MODELNAME=gpt-4o-mini
