--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "autoprefixer": "^10.4.20",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.469.0",
     "next": "15.1.3",
@@ -22,9 +21,12 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/tailwindcss": "^3.1.0",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9",
     "eslint-config-next": "15.1.3",
     "postcss": "^8.4.49",
+    "postcss-nesting": "^13.0.1",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
