moved images path to env var and fixed ruff warning

--- a/backend/.env
+++ b/backend/.env
@@ -4,3 +4,4 @@ COP_COPERTINE_COLLNAME=Copertine
 COP_VISION_MODELNAME=gpt-4o-mini
 COP_OLDEST_DATE=2013-03-27
 COP_SAVE_TO_JSON=false
+COP_IMAGES_DIR=/home/mema/code/copertinefull/images
