--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,20 @@
-# .env
-COP_WEAVIATE_URL=127.0.0.1
-COP_COPERTINE_COLLNAME=Copertine
-COP_VISION_MODELNAME=gpt-4o-mini
-COP_OLDEST_DATE=2013-03-27
-COP_SAVE_TO_JSON=false
-COP_IMAGES_DIR=/home/mema/code/copertinefull/images
+# Database
+DATABASE_URL=sqlite:///./sql_app.db
+
+# Security
+SECRET_KEY=c4ca4238a0b923820dcc509a6f75849b  # This is just for development
+
+# Email Configuration (MailHog)
+MAIL_USERNAME=any
+MAIL_PASSWORD=any
+MAIL_FROM=test@example.com
+MAIL_PORT=1025
+MAIL_SERVER=localhost
+MAIL_STARTTLS=False
+MAIL_SSL_TLS=False
+
+# Frontend URL
+FRONTEND_URL=http://localhost:3000
+
+# Rate Limiting
+RATE_LIMIT_PER_MINUTE=5
