--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,3 +34,19 @@ services:
       - mema_network
       - weaviate_net
     restart: unless-stopped
+
+  mailhog:
+    image: mailhog/mailhog:latest
+    container_name: mailhog
+    ports:
+      - "1025:1025"  # SMTP server port
+      - "8025:8025"  # Web interface port
+    networks:
+      - mema_network
+    restart: unless-stopped
+
+networks:
+  mema_network:
+    driver: bridge
+  weaviate_net:
+    driver: bridge
