--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "date-fns": "^4.1.0",
     "lucide-react": "^0.469.0",
     "next": "15.1.3",
+    "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "weaviate-ts-client": "^2.2.0"
