--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -32,8 +32,14 @@ yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
-# env files (can opt-in for committing if needed)
-.env*
+# env files
+.env
+.env.local
+.env.development
+.env.production
+
+# Allow example env file
+!.env.example
 
 # vercel
 .vercel
