--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.10.6",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.469.0",
     "next": "15.1.3",
