--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,4 @@ images/
 backend/src/includes/__pycache__/mytypes.cpython-311.pyc
 backend/src/includes/__pycache__/utils.cpython-311.pyc
 backend/src/includes/__pycache__/mytypes.cpython-311.pyc
+backend/data/missingdates.txt
