--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,4 @@ backend/src/includes/__pycache__/mytypes.cpython-311.pyc
 backend/src/includes/__pycache__/utils.cpython-311.pyc
 backend/src/includes/__pycache__/mytypes.cpython-311.pyc
 backend/data/missingdates.txt
+backend/src/.DS_Store
