--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,6 @@ services:
     command: ["node", "server.js"]
     networks:
       - mema_network
-      - weaviate_net
     restart: unless-stopped
 
   copback:
@@ -32,5 +31,8 @@ services:
       - /home/mema/code/copertinefull/images:/app/images  # Read-write
     networks:
       - mema_network
-      - weaviate_net
     restart: unless-stopped
+
+networks:
+  mema_network:
+    driver: bridge
